--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,5 @@
-:root {
+.calcite-mode-dark {
     --calcite-color-brand: #cd071e;
-    --calcite-color-text-1: #ffffff;  
-    --calcite-color-text-2: #edd3d3;  
 }
 
 html,
